SFDC Automation/src/objects/ACS_Contract__c.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <label>Account ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Branch_ID__c</fullName>
        <label>Branch ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Combined_Single_Limit__c</fullName>
        <label>Combined Single Limit</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Package_ID__c</fullName>
        <externalId>true</externalId>
        <label>Contract Package ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Accommodation__c</fullName>
        <label>Customer Accommodation</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Branch__c</fullName>
        <label>Customer / Branch</label>
        <referenceTo>Customer_Branch__c</referenceTo>
        <relationshipLabel>Contract Packages</relationshipLabel>
        <relationshipName>ACS_Contracts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fuel_Description__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fuel Description</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fuel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fuel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hazardous_Material_Description__c</fullName>
        <label>Hazardous Material Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_Operation__c</fullName>
        <label>Hours Operation</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ID Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insurance_Description__c</fullName>
        <label>Insurance Description</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Update_Date__c</fullName>
        <label>Last Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Liability_Insurance_Deductible__c</fullName>
        <label>Liability Insurance Deductible</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Liability_Insured_By__c</fullName>
        <label>Liability Insured By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Of_Washes_Provided__c</fullName>
        <label>No Of Washes Provided</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Onsite_Maintenance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Onsite Maintenance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Package_ID__c</fullName>
        <externalId>true</externalId>
        <label>Package ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pegged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pegged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Physical_Damage_Deductible__c</fullName>
        <label>Physical Damage Deductible</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physical_Damage_Responsibility__c</fullName>
        <label>Physical Damage Responsibility</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pickup_Delivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pickup Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Line_Code__c</fullName>
        <label>Product Line Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_Sheet_ID__c</fullName>
        <description>Cost Sheet ID in CIM</description>
        <externalId>true</externalId>
        <label>Rate Sheet ID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reefer_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reefer Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAM_Class__c</fullName>
        <label>SAM Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Safety_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Safety Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Island__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Island</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special Instructions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subs_During_PM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subs During PM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Substitution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>From ACS ETL load</description>
        <label>Substitution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tires__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tires</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vehicle_Count__c</fullName>
        <label>Vehicle Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wash_Provided_By__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wash Provided By</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wash__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wash</label>
        <type>Checkbox</type>
    </fields>
    <label>ACS Contract</label>
    <nameField>
        <label>ACS Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACS Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>